@@ -1039,5 +1039,9 @@ Mon Jan 22 17:56:02 CET 2001
 
 	- Synced gram.y and preproc.y.   
 	- Added #include "postgres.h" to pgc.l.
+
+Tue Jan 23 08:54:14 CET 2001
+
+	- Moved database name handling to libecpg.
 	- Set ecpg version to 2.8.0. 
 	- Set library version to 3.2.0.
